--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,155 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>Index</title>
+<h1 style="text-align:center"><b>ABC INSTITUTION</h1>
+<style>
+	h1{
+		color:#c32148 ;
+		font-family: sans-serif;
+		border-color:  #ab4e52;
+		border-style: double;
+	}
 
+	h2{
+		color:#873260  ;
+	}
+    
+     img{
+     	height:70px;
+     	width:70px;
+     }
+
+	.container{
+		border-color: brown;
+		background-color: bisque;
+		height:25px; 
+		width:100px;
+		font-style: oblique;
+		position: absolute;
+		transform: translate(-50%, -50%);
+	 	transform: translate(-50%, -50%);
+	  	top: 150%;
+  		left: 50%;
+  		cursor: pointer;
+  		border-radius: 60px;
+  		display: inline-block;
+	}
+
+	.first{
+		display:flex;
+		align-items: flex-start;
+		justify-content: space-between;
+		margin-top: 50px;
+		margin-block: 100px;
+
+	}
+
+	.About{
+		display:flex;
+		background-color: #ffdab9;
+		flex-direction: column;
+		width: 300px;
+		height:140px;
+		text-align: center;
+		border-style: solid;
+		border-color: #954535;
+	}
+
+	.ExistUser{
+		display:flex;
+		background-color: #ffdab9;
+		flex-direction: column;
+		justify-content: center;
+		width: 300px;
+		height:140px;
+		text-align: center;
+		border-style: solid;
+		border-color: #954535;
+		 position: relative;
+
+				  
+	}
+	
+
+	.NewUser{
+		display:flex;
+		background-color:#ffdab9;
+		flex-direction: column;
+		justify-content: center;
+		width: 300px;
+		height:140px;
+		text-align: center;
+		border-style: solid;
+		border-color:#954535 ;
+
+		 position: relative;
+	}
+
+
+	.second{
+		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
+		margin-top: 200px;
+		
+	}
+
+	.third{
+		justify-content: center;
+		text-align: center;
+		margin-block: 10px;
+	}
+	
+
+</style>
+</head>
+
+<body>
+<div class=first>
+<div class=About>
+	<h2>About Us &#128519;</h2>
+	<p>Hi! we provide every offers what you need!</p>
+</div>
+<div class=ExistUser>
+	<h2>Existing User &#128077;</h2>
+	<p>Click below &#128071;</p>
+	<form method='POST' action="SignIn.html">
+	<button class="container" type='submit' text='Sign In' onclick="C:\Login\SignIn.html">Sign In</button>
+</form>
+</div>
+<div class=NewUser>
+     <h2>New User &#129309;</h2>
+	<p>Click below &#128071;</p>
+	<form method='POST' action="SignUp.html">
+	<button class="container" type='submit' text='Sign Up'>Sign Up</button>
+</form>
+</div>
+</div>
+
+<div class=second>
+	<div>
+		<a href="https://www.facebook.com/">
+		<img src="C:\Login\fb.jpg" >
+	</a>
+	</div>
+
+	<div>
+		<a href="https://www.instagram.com/?hl=en">
+		<img src="C:\Login\instagram.jpg" >
+		</a>
+	</div>
+
+	<div>
+		<a href="https://www.linkedin.com/login">
+		<img src="C:\Login\linkedin.jpg">
+	</a>
+	
+	</div>
+</div>
+
+<div class=third>
+	<h4>All rights reserved copywright @ 2024 </h4>
+</div>
+</body>
+</html>
